<resources>
    <string name="app_name">Lost &amp; Found: Pet Finder</string>
    <string name="lost_button">Lost</string>
    <string name="found_button">Found</string>
    <string name="thumbnail_list_view">thumbnail</string>
    <string name="lv_pet_name_label">Pet:</string>
    <string name="lv_contact_label">Contact:</string>
    <string name="lv_owner_label">Owner:</string>
    <string name="lv_post_date_label">Post Date:</string>
    <string name="all_button">All</string>
    <string name="lv_type_label">Type:</string>
    <string name="sf_pet_name">Pet:</string>
    <string name="sf_post_date">Post Date:</string>
    <string name="sf_breed">Breed:</string>
    <string name="sf_feed_type">Lost Or Found</string>
    <string name="sf_gender">Gender:</string>
    <string name="sf_description"><u>Description</u></string>
    <string name="sf_email">Email:</string>
    <string name="sf_phone_number">Phone Number:</string>
    <string name="fs_address">Address:</string>
    <string name="sf_users_name">Users Name:</string>
    <string name="sf_contact_information"><u>Contact Information</u></string>
    <string name="sf_pet_type">Pet Type</string>
    <string name="sf_image">Pet Picture</string>
    <string name="map_button">Map</string>
    <string name="map_directions">Map Directions</string>
    <string name="options">Options</string>
    <string name="add_post">Add Found/Lost Post</string>
    <string name="about">About</string>
    <string name="address">Address:</string>
    <string name="name">Your Name:</string>
    <string name="add_photo">Add Photo</string>
    <string name="post_information">Post Information</string>
    <string name="cancel">Cancel</string>
    <string name="pet_gender">Pet Gender:</string>
    <string name="city">City:</string>
    <string name="pet_name">Pet Name:</string>
    <string name="pet_was_lost_or_found">Pet was Lost Or Found:</string>
    <string name="email">Email:</string>
    <string name="zip">Zip:</string>
    <string name="description_of_pet">Description Of Pet:</string>
    <string name="pet_type">Pet Type</string>
    <string name="breed">Breed:</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="menu">Menu</string>
    <string name="phone">Phone:</string>
    <string name="addedphoto">addedPhoto</string>
</resources>
