<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/scrollView"
    tools:context="com.hk.lostandfound.SingleFeed">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sf_pet_name"
            android:id="@+id/sf_pet_name_id"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sf_feed_type"
            android:id="@+id/sf_feed_type_id"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_pet_type"
            android:layout_below="@id/sf_feed_type_id"
            android:layout_alignParentEnd="true"
            android:id="@+id/sf_pet_type_id"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_breed"
            android:id="@+id/sf_breed_id"
            android:layout_below="@id/sf_pet_name_id"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_post_date"
            android:id="@+id/sf_post_date_id"
            android:layout_below="@id/sf_pet_type_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_gender"
            android:id="@+id/sf_gender_id"
            android:layout_below="@id/sf_pet_type_id"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sf_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/description_label_id"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sf_gender_id"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/sf_description_text_id"
            android:layout_below="@id/description_label_id"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/sf_image_id"
            android:maxWidth="300dp"
            android:maxHeight="300dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/sf_image"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sf_description_text_id"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sf_contact_information"
            android:id="@+id/sf_contact_label_id"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sf_image_id"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_users_name"
            android:id="@+id/sf_user_name_id"
            android:layout_below="@id/sf_contact_label_id"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_phone_number"
            android:id="@+id/sf_phone_number_id"
            android:layout_below="@id/sf_user_name_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fs_address"
            android:id="@+id/sf_address_id"
            android:layout_below="@id/sf_phone_number_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sf_email"
            android:id="@+id/sf_email_id"
            android:layout_below="@id/sf_address_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sf_email_id"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/notifyButton" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_directions"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"

                android:id="@+id/sf_mapButton" />

        </GridLayout>


    </RelativeLayout>

</ScrollView>
